# geospec

./: CHANGELOG.md  README.md  pyproject.toml
src/geojsonkit/: __init__.py  _types.py  base.py  codec.py  feature.py  geometry.py  utils.py  validation.py
tests/: test_base.py  test_codec.py  test_feature.py  test_geometry.py  test_utils.py  test_validation.py
