[project]
name = "geojsonkit"
version = "0.1.0"
description = "Drop-in Python replacement for jazzband/geojson (RFC 7946, zero deps, Python 3.10+)"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Agentine" }
]
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/agentine/geojsonkit"
Repository = "https://github.com/agentine/geojsonkit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geojsonkit"]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pytest>=9.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
